static/css/mozsearch.css
/* ... */
/* Search results */

.search-result-header {
  padding: 0 2rem;
}

.nsresult-desc {
  padding: 2rem 2rem 0 2rem;
  font-size: 1.2rem;
}

table.results {
  margin: 0.5rem 2rem;
  width: calc(100% - 4rem);
}

/* Make context lines more subtle. */
.results tr.before-context-line,
.results tr.after-context-line {
  opacity: 0.5;
}

/* Delineate the transition between consecutive groups. */
tr.after-context-line + tr.before-context-line {
  border-top: 1px solid gray;
}

.results tr:hover,
.file tr:hover {
  background: none;
}
.results tr,
.file tr {
  border: 0;
  line-height: var(--source-line-height);
}
.file tr .line-number,
.file tr .code pre code {
  /* don't let bolded code increase the line-height - see bug 1322740 comment 9 */
  max-height: calc(var(--base-font-size) * var(--source-line-height));
}
.left-column,
.file td:first-child {
  text-align: right;
  color: #aaa;
  width: 8ex;
}
.results td {
  padding: 0.1rem 0.5rem;
}
.results a {
  cursor: pointer;
  display: inline-block;
}
.file a:target {
  background-color: gray;
  color: white;
  padding: 0 0.5rem;
}
.results code {
  white-space: pre;
}
.result-head td {
  padding-top: 0.3rem; /* Additional padding to visually separate results.*/
  padding-bottom: 0;
}
.result-head td.left-column {
  padding-right: 0.2rem; /* Moves the icon closer to the path by reducing the padding.*/
}

.result-context {
  font-style: italic;
  margin-left: 10px;
  padding-left: 4px;
  padding-right: 4px;
  color: var(--result-context-color);
}

.result-upsearch {
  padding-left: 8px;
  color: var(--link-color);
}

.section {
  text-align: right;
  font-size: 150%;
}

.result-pathkind {
  font-size: 150%;
}

.result-kind {
  font-size: var(--base-font-size);
  font-weight: 800;
}

.expando {
  cursor: pointer;
  color: var(--page-foreground);
}
/* End search results */

.file td {
  padding: 0;
}
.file pre {
  margin: 0;
}

/* Context menu */
.context-menu {
  /* absolutely positioned within the containing block of the <body> relative
     to the click event */
  position: absolute;
  background-color: var(--page-background);
  color: var(--page-color);
  margin: 0;
  padding: 0;
  border: 1px solid var(--page-border-color);
  border-radius: 6px;
  list-style: none;
  z-index: 202;
  overflow: auto;
  transition: opacity .2s ease;
}
.context-menu:not(.bottom) {
  border-top-left-radius: 0;
}
.context-menu.bottom {
  border-bottom-left-radius: 0;
}
.context-menu:focus {
  outline: none;
}
.context-menu a {
  display: block;
}
.contextmenu-expansion-preview {
  max-width: 600px;
  overflow: hidden;
  text-overflow: ellipsis;
}
.context-menu code {
  white-space: nowrap;
}
.context-menu-group-label {
  display: block;
  padding: 0.5em;
  font-weight: bold;
}
.content {
  padding: 0 0 0.5rem 0;
}

/* Breadcrumbs */
.path-separator {
  margin: 0 0.2rem;
}
.breadcrumbs {
  display: inline-block;
  margin: 0;
  padding: 1rem;
  position: sticky;
  z-index: 101;
  top: var(--header-height);
  margin: var(--breadcrumbs-margin-top) 0 1rem 0;
  padding: 0 var(--breadcrumbs-padding);
  width: 100%;
  height: var(--breadcrumbs-height);
  text-align: left;
}
.breadcrumbs.stuck {
  white-space: no-wrap;
}

#tree-switcher {
  pointer-events: auto;
  background-color: transparent;
  background-image: var(--select-arrow-svg);
  background-position: center center;
  background-repeat: no-repeat;
  appearance: none;
  border: none;
  vertical-align: middle;
  width: var(--tree-switcher-width);
  height: var(--tree-switcher-height);
  border-radius: 2px;
}
#tree-switcher:hover {
  background-color: var(--list-hover-background);
}
#tree-switcher:active {
  background-color: var(--button-active-background);
}

#tree-switcher-menu {
  display: flex;
  flex-direction: row;
}

#tree-switcher-menu ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

#tree-switcher-menu ul + ul {
  border-inline-start: 1px solid var(--page-border-color);
}

#tree-switcher-menu .indent {
  padding-inline-start: 24px;
  padding-inline-end: 24px;
}

/* Footer */
.footer {
  color: #999;
  font-size: 1rem;
  margin: 1.2rem;
  justify-content: center;
}

/* Navigation panel */
.panel {
  /* (position:fixed is always relative to the viewport's initial containing
     block, so it doesn't matter where this node lives in the DOM, apart from
     accessibility tree purposes.) */
  position: fixed;
  /* We position the navigation panel just below the search box so that when
   * it is collapsed it exists in the margins of the page so that we can show
   * it on all pages.
   *
   * Previously it was styled to be floating on the page which was only
   * appropriate on source listing pages where it would usually be in the
   * right margin of the page. But now we want it visible on all pages.
   *
   * Note that on pages where we display the indexed revision as part of the
   * search box, this offset needs to be adjusted, and we do that below using
   * the ".old-rev" selector. */
  top: var(--header-height);
  right: 22px;
  background-color: var(--page-background);
  border: 1px solid var(--page-border-color);
  min-width: 12rem;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: calc(100% - 150px);
  z-index: 202;
}
#panel-toggle {
  display: inline-block;
  background-color: var(--panel-header-background);
  color: var(--panel-header-color);
  margin: 0;
  padding: 0.5rem 0.2rem 0.5rem 0.7rem;
  border: 0;
  width: 100%;
  text-align: left;
  cursor: pointer;
}
.navpanel-other-icons {
  float: right;
}
#show-settings {
  margin-right: 0.5rem;
  color: var(--panel-header-color);
}
#open-help {
  margin-left: 0.5rem;
  color: var(--panel-header-color);
}
.navpanel-icon {
  display: inline-block;
}
.navpanel-toggle-icon::before {
  margin-right: 0.5rem;
  transform: rotate(-90deg);
  transition: all 0.1s;
}
.navpanel-toggle-icon.expanded::before {
  transform: rotate(0deg);
  transition: all 0.1s;
}
.panel h4 {
  margin: 0;
  padding: 0.5rem;
}
/* ... */

